# claude-indexer

./: .gitignore  .mcp.json  CLAUDE.md  INSTALL.md  README.md  benchmark.py  planned-future-implementation.md  pyproject.toml  setup.sh
.github/workflows/: tests.yml
claude-integration/: install.sh
claude-integration/hooks/: auto-index.sh
docs/: IMPLEMENTATION-ROADMAP.md  PHASE2-FEATURES.md
mcp-server/: __init__.py  server.py
src/: chunker.py  config.py  embedder.py  embedding_cache.py  indexer.py  search.py  tree_sitter_chunker.py
tests/: test_chunker.py  test_config.py  test_embedder.py  test_embedding_cache.py  test_indexer.py  test_search.py  test_tree_sitter_chunker.py
tests/fixtures/: sample.py
